--- a/index.html
+++ b/index.html
@@ -1,8 +1,73 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-<p>Im making a change</p>
+<h1>Kornpat Choy's CV</h1>
+<h2>Kornpat (Claus) Choy</h2>
+<p>704 - 2150 Mackay, Montreal, Quebec H3G 2M2 • kornpat.choy@mail.mcgill.ca • +1(514)812-0993, +6681-855-6232</p>
+
+<h3>Education</h3>
+<h4>McGill University, Canada</h4>
+<p>Bachelors of Engineering - Major in Computer Engineering (CGPA: 3.52 out of 4.00)</p>
+<h4>Bangkok Patana School, Thailand</h4>
+<p>International Baccalaureate Diploma (Overall score: 33 out of 45)</p>
+<ul>
+  <li>Awarded the Certificate of Academic Achievement in Computer Science (2009 - 2010)</li>
+</ul>
+
+<h3>Relevant Projects</h3>
+<h4>Indoor Positioning System Design Project, McGill</h4>
+<ul>
+  <li>Developed Android application to track users location through internal phone sensors utilizing a Sequential Monte Carlo method (density estimation algorithm)</li>
+  <li>Implemented multiple services which pass messages to the main activity and each other, which run concurrently in the application background</li>
+  <li>Characterized noise from sensors through testing and evaluation</li>
+  <li>Code can be found on github: https://github.com/claus147/DesignProjectISP</li>
+</ul>
+
+<h3>Work Experience<h3>
+<h4>The Siam Commercial Bank Public Company Limited, Thailand - Internship, Internet & Mobile Banking</h4>
+<ul>
+  <li>Developed an Android application for tablets to reduce overall execution time in conducting transactions at branches</li>
+  <li>Incorporated a custom Array Adapter to populate a List View with custom elements</li>
+  <li>Included a separate Activity to handle language changes</li>
+</ul>
+<h4>The Siam Commercial Bank Public Company Limited, Thailand - Internship, Enterprise Architecture</h4>
+<ul>
+  <li>Nominated by the Senior Vice-President to sit in on pitch meetings with IT entrepreneurs</li>
+  <li>Involved indirectly in the decision-making process by providing feedbacks regarding the presented ideas</li>
+  <li>Designed training material on the application of Business Process Model Notation to promote standardization throughout the entire bank</li>
+  <li>Administered the Security Improvement Project by giving presentations to the security division</li>
+  <li>Consolidated a list of over 300 applications in preparation of an application management system port</li>
+</ul>
+<h4>McGill Hong Kong Student Network, Canada - Webmaster</h4>
+  <li>Facilitated promotional campaigns through developing, designing and maintaining
+the network’s webpage – www.hksn.ca</li>
+  <li>Supervised the installation and operation of audio and visual equipment during network events</li>
+  <li>Co-organized monthly events, such as singing contests, social gatherings tailored to members’ needs</li>
+</ul>
+<h4>Bangkok Patana School, Thailand - Student Leader</h4>
+<ul>
+  <li>Nominated by teachers and peers to represent the students’ interests on the School Board</li>
+  <li>Conducted office hours to collect students’ opinions and attended weekly meetings with senior teachers and the Principles</li>
+</ul>
+
+<h3>Extracurricular Activities</h3>
+<h4>Quebec Engineering Competition, Canada - Junior Design Category</h4>
+<ul>
+  <li>Led a diverse team and achieved 1st place in the McGill Engineering Competition (Nov 2012)</li>
+  <li>Gained entry as the representatives of McGill University in the province wide engineering competition</li>
+  <li>Designed and constructed a spaceship bridge simulator in 6 hours with limited resources</li>
+  <li>Leadership skills, efficient teamwork and creativity were highly commended by judges</li>
+</ul>
+<h4>Bangkok Patana School, Thailand - Student Leader</h4>
+<ul>
+  <li>Completed the three-year college-based program for training commissioned officers of the
+Kingdom of Thailand armed forces</li>
+  <li>Earned the equivalent Rank of Reserve Sergeant by attending weekly five-hour training in military theories and physical fitness</li>
+  <li>Awarded the Medal of Perfect Attendance as a recognition of perseverance and dedication</li>
+</ul>
+
+<h4>Skills</h4>
+<p>Software: Java (proficient), XML (intermediate), HTML (intermediate), C/C++ (intermediate), CSS (basic), Python (basic)</p>
+<p>Languages: English (native), Thai (native), Chinese (basic)</p>
 </body>
 </html>
