adding css test

--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html>
+
+
+<head>
+<link rel="stylesheet" href="main.css">
+
+</head>
+
+
 <body>
 <h1>Kornpat Choy's CV</h1>
 <h2>Kornpat (Claus) Choy</h2>
