some header changes

--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 
 
 <head>
+<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 <link rel="stylesheet" href="main.css">
 
 </head>
 
 
 <body>
-<h1>Kornpat Choy's CV</h1>
-<h2>Kornpat (Claus) Choy</h2>
+<div class="header">
+  <div class="title">
+    <h1>Claus (Kornpat) Choy's Website</h1>
+  </div>
+  
+</div>
+
+
+<h2>Claus (Kornpat) Choy</h2>
 <p>704 - 2150 Mackay, Montreal, Quebec H3G 2M2 • kornpat.choy@mail.mcgill.ca • +1(514)812-0993, +6681-855-6232</p>
 
 <h3>Education</h3>
